# bsrn-qc

./: .gitignore  .readthedocs.yaml  AGENT.md  README.md  pyproject.toml  test_timeseries_plot.py
.agents/skills/project-rules/: SKILL.md
.github/workflows/: ci.yml
data/: retrive_Linke.py
docs/: conf.py  qiq_monthly_workflow.md  requirements.txt
docs/examples/: index.rst
docs/examples/huggingface/: obtain_crs.ipynb  obtain_crs.py
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: archive.rst  dataset.rst  index.rst  io.rst  physics.rst  qc.rst  utils.rst  visualization.rst
docs/sphinx/tutorials/: 2.qc_and_averaging.ipynb  index.rst
docs/sphinx/user_guide/: getting_started.rst  package_overview.rst
docs/tutorials/: 1.data_downloading.ipynb  2.qc_and_averaging.ipynb  2.quality_control.ipynb  3.time_averaging.ipynb  3.to_archive.ipynb  4.clear_sky_detection.ipynb  4.time_averaging.ipynb  5.clear_sky_detection.ipynb  5.cloud_enhancement_event.ipynb  6.separation_modeling.ipynb  clear_sky_detection.ipynb  cloud_enhancement_event.ipynb  index.rst
notebooks/: qc_demo.ipynb
src/bsrn/: __init__.py  constants.py  dataset.py
src/bsrn/archive/: __init__.py  api.py  archive_lr_formats.py  formatter.py  formatting.py  records_base.py  records_dynamic.py  records_models.py  specs.py  validation.py
src/bsrn/archiving/: __init__.py  api.py  formatter.py  mappings.py  specs.py  stations.py  utils.py  validation.py
src/bsrn/io/: __init__.py  crs.py  mcclear.py  merra2.py  nsrdb.py  reader.py  readers.py  retrieval.py  writers.py
src/bsrn/modeling/: __init__.py  clear_sky.py  separation.py
src/bsrn/physics/: __init__.py  clearsky.py  geometry.py  spa.py
src/bsrn/qc/: __init__.py  closure.py  consistency.py  diff_ratio.py  erl.py  k_index.py  physical.py  ppl.py  rare.py  (+3 more)
src/bsrn_qc/: __init__.py  constants.py
tests/: test_archive_pydantic.py  test_availability_plot.py  test_cs_detection.py  test_physics.py  test_visualization.py
(+26 files in other folders)
